# ominous-space-adventure

./: .gitignore  LICENSE  LICENSE.txt  README.md  ROADMAP.md  pyproject.toml
.devcontainer/: devcontainer.json
src/tpc/: __about__.py  __main__.py  gamestate.py  playeractions.py
tests/: __init__.py  test_gamestate.py  test_playeractions.py
